<resources>
    <string name="app_name">Bullshit Bingo Champion</string>
    <string name="action_new">New Card</string>
    <string name="action_edit">Edit</string>
    <string name="select_dim">Select new card dimension</string>
    <string name="create">Create</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_save">Save as…</string>
    <string name="long_press_to_drag">Tap to edit. Long press to drag</string>
    <string name="edit_cell_title">Edit cell</string>
    <string name="action_accept">Accept</string>
    <string name="action_share_file">Share bullshit file</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="drawer_open">Select card</string>
    <string name="new_card_name">new card</string>
    <string name="save_card_title">Save card as…</string>
    <string name="file_comment">This is a file for Bullshit Bingo Champion app. It contains square grid of words and can
        be used to play bullshit bingo with https://play.google.com/store/apps/details?id=com.denisk.bullshitbingochampion Must be UTF-8. Empty lines count as words!
        Each line may have a format \'word | 3\', where 3 is the number of times this word was hit (currently 0 or 1, but we\'ll support multihits later)
    </string>
    <string name="error_cant_start_comment">Can\'t start with </string>
    <string name="error_wrong_filename">Illegal file name</string>
    <string name="error_wrong_word_count">Count of words is wrong, should be able to create NxN grid. Card: %s</string>
    <string name="error_empty_card">Card is empty: %s</string>
    <string name="error_directory_does_not_exist">Directory does not exist: %s</string>
    <string name="action_delete">Delete</string>
    <string name="delete_prompt">Delete card: %s</string>
    <string name="error_empty_card_name">C\'mon, type something</string>
    <string name="share_with">Share the words…</string>
    <string name="share_title">Bullshit Bingo card: %s</string>
    <string name="long_press_to_delete">Long press to delete</string>
    <string name="error_wrong_card_format">Wrong card format</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title">Settings</string>
    <string name="error_cant_read_file">File can\'t be opened for read: %s</string>
    <string name="game_bingo">Bingo!</string>
    <string name="action_increase_font">Increase font</string>
    <string name="action_decrease_font">Decrease font</string>
    <string name="rate">Rate %s</string>
    <string name="rate_if_you_enjoy">If you enjoy using %s, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_do_it">Rate it !</string>
    <string name="rate_later">Remind me later</string>
    <string name="rate_no">No thanks</string>
    <string name="pref_title_vibrate">Vibration</string>
    <string name="pref_summary_vibrate">Whether to vibrate when selecting a word</string>
    <string name="pref_title_reload">Reload default cards</string>
    <string name="pref_summary_reload">Reload default cards recreating them if not exist and overriding any changes in
        them
    </string>
    <string name="pref_dialog_reload">Reload default cards? Any changes in them will be lost, save with unique names to
        avoid losing the changes
    </string>
    <string name="drawer_first_open">This is a list of default cards. Feel free to modify them - you\'ll be able to
        reload them from \'Settings\' menu
    </string>
    <string name="error_cant_parse_occurrences">Can\'t parse the number of occurrences for word %1$s  %2$s</string>
    <string name="toast_saving_card">Saving card %s…</string>
    <string name="action_share_image">Share image</string>
    <string name="share_picture_bbc_title">Bullshit Bingo Champion for Android</string>
    <string name="share_picture_card">Card:</string>

    <string name="share_button">Share result</string>

    <!--todo remove those when the Ukrainian PR is merged-->
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>
    <string name="pref_title_changelog">Changelog</string>
    <string name="pref_summary_changelog">Show changelog</string>
    <string name="pref_group_colors_title">Colors</string>
    <string name="pref_title_color_background">Background color</string>

    <string name="pref_show_changelog_key" translatable="false">show_changelog</string>
    <string name="pref_vibrate_key" translatable="false">pref_vibrate</string>
    <string name="pref_reload_default_cards_key" translatable="false">reload_default_cards</string>
    <string name="pref_reset_colors_key" translatable="false">pref_reset_colors</string>

    <!--colors. Please make sure that you add the key to prefs_colors array below-->
    <string name="pref_color_grid_key" translatable="false">pref_color_grid</string>
    <string name="pref_color_card_background_key" translatable="false">pref_color_card</string>
    <string name="pref_color_card_background_selected_key" translatable="false">pref_color_card_selected</string>
    <string name="pref_color_card_border_key" translatable="false">pref_color_card_border</string>
    <string name="pref_color_card_border_selected_key" translatable="false">pref_color_card_border_selected</string>
    <string name="pref_color_card_text_key" translatable="false">pref_color_card_text</string>
    <string name="pref_color_card_text_selected_key" translatable="false">pref_color_card_text_selected</string>
    <string name="pref_color_bingo_frame_key" translatable="false">pref_color_bingo_frame</string>
    <string name="pref_color_bingo_background_key" translatable="false">pref_color_bingo_background</string>
    <string name="pref_color_bingo_text_key" translatable="false">pref_color_bingo_text</string>

    <array name="prefs_colors">
        <item>@string/pref_color_grid_key</item>
        <item>@string/pref_color_card_background_key</item>
        <item>@string/pref_color_card_background_selected_key</item>
        <item>@string/pref_color_card_border_key</item>
        <item>@string/pref_color_card_border_selected_key</item>
        <item>@string/pref_color_card_text_key</item>
        <item>@string/pref_color_card_text_selected_key</item>
        <item>@string/pref_color_bingo_frame_key</item>
        <item>@string/pref_color_bingo_background_key</item>
        <item>@string/pref_color_bingo_text_key</item>
    </array>
    
    <string name="pref_title_color_card">Unselected word color</string>
    <string name="pref_title_color_card_selected">Selected word color</string>
    <string name="pref_title_color_card_border">Unselected word border color</string>
    <string name="pref_title_color_card_border_selected">Selected word border color</string>
    <string name="pref_title_color_card_text">Unselected word text color</string>
    <string name="pref_title_color_card_selected_text">Selected word text color</string>
    <string name="pref_title_color_bingo_frame">Bingo frame color</string>
    <string name="pref_title_color_bingo_background">Bingo background color</string>
    <string name="pref_title_color_bingo_text">Bingo text color</string>
    <string name="pref_summary_reset_colors">Reset all colors to their default values</string>
    <string name="pref_title_reset_colors">Reset colors</string>
    <string name="pref_dialog_reset_colors">Reset all colors to their default values? All your custom colors will be
        replaced with default ones.
    </string>

</resources>
